# chat-manager

./: .env.example  .gitignore  QUICKSTART.md  README.md  SETUP_MINIAPP.md  TODO.md  pyproject.toml
.devcontainer/: _post_create_command.sh  devcontainer.json
.github/workflows/: deploy-chatbot-heroku.yml  deploy-langgraphapp-heroku.yml
admin-panel/: .env.example  CHANGELOG.md  QUICKSTART.md  README.md  index.html  package-lock.json  package.json
admin-panel/src/: App.vue
admin-panel/src/components/: ThreadDetails.vue  ThreadsList.vue
admin-panel/src/services/: api.js
chatbot/: Procfile  main.py  pyproject.toml  requirements.txt
chatbot/_log_utils/: __init__.py  debug_logger.py  http_logger.py
chatbot/conversation_states/: __init__.py  actions.py  humans.py  improvements.py  messages.py  states.py
chatbot/conversation_states/store_schemas/utils/: tracker.py
chatbot/conversation_states/utils/: reducers.py
chatbot/cron/: __init__.py  __main__.py  daily_runner.py
chatbot/event_handlers/: message_handler.py  setup_menu_button.py  webapp_handler.py
chatbot/event_handlers/utils/stream/: context_extractor.py  message_responder.py  state_backfill.py  stream_consumer.py  stream_producer.py  stream_queue.py
chatbot/messenger_connector/: connectorClasses.py  tg_settings.py
chatbot/server/: __init__.py  config.py  route.py
chatbot/tests/fixtures/faker/: tg_message.py
langgraph-app/: CHANGELOG.md  Dockerfile.heroku  INTRO_FEATURE.md  REACTIONS_FEATURE.md  README.md  __init__.py  langgraph.json  main.py  pyproject.toml
langgraph-app/backup/20260209_224620/lg_main/: __init__.py
langgraph-app/backup/20260209_224620/lg_main/g_command_router/: edges.py  graph.py
langgraph-app/backup/20260209_224620/lg_main/g_supervisor/: edges.py
langgraph-app/backup/20260209_224620/tool_sets/: user_profile.py
langgraph-app/config/: __init__.py  commands.py
langgraph-app/lg_main/g_chat_manager/: __init__.py  edges.py  graph.py  internal_edges.py  internal_graph.py  internal_nodes.py  nodes.py
langgraph-app/lg_main/g_command_router/: edges.py  graph.py  nodes.py
langgraph-app/lg_main/g_daily_meta_improver/: __init__.py  graph.py
langgraph-app/lg_main/g_daily_runner/: __init__.py  graph.py
langgraph-app/lg_main/g_daily_summary/: __init__.py  graph.py
langgraph-app/lg_main/g_dispatcher/: __init__.py  edges.py  graph.py  nodes.py
langgraph-app/lg_main/g_supervisor/: edges.py  graph.py  nodes.py
langgraph-app/prompt_templates/: prompt_builder.py
langgraph-app/testing_utils/: README.md  __init__.py  test_user.py
langgraph-app/tool_sets/: chat_memory.py  highlights.py  improvements.py  user_profile.py
libs/_arch/: pyproject.toml
libs/conversation_states/: README.md  pyproject.toml
libs/conversation_states/conversation_states/: __init__.py  actions.py  highlights.py  humans.py  improvements.py  main.py  memory.py  states.py
libs/conversation_states/conversation_states/store_schemas/: human_profile.py  instruction.py  schedule.py  task.py
libs/conversation_states/conversation_states/store_schemas/utils/: version_management.py
libs/conversation_states/conversation_states/utils/: reducers.py
miniapp/: README.md  index.html  package-lock.json  package.json  server.js  vite.config.js
miniapp/src/: App.vue  main.js
miniapp/src/components/: CourseCard.vue  MentorCard.vue  MessageCard.vue  ResourceCard.vue  SearchBar.vue  ServiceCard.vue  TabBar.vue  VacancyCard.vue
miniapp/src/data/: mockData.js
miniapp/src/services/: api.js  telegram.js
out_intro_vastrik_design_20260210_115626/: filtered_messages.jsonl  users.mapped.missing.intro_true.json  users.mapped.missing.intro_true.yaml  users.mapped.missing.json  users.mapped.report.json  users.mapped.yaml  users.yaml
scripts/: README.md  delete_all_threads.py  map_users_yaml_from_screenshots.py  migrate_intro_message_links.py  run-dev.sh  run_daily_runner_local.sh  screenshots_users_to_json.py  set-webhook.sh  telegram_intro_extract.py
scripts/deploy/: README.md  TEST_RESULTS.md  chatbot.sh  deploy.sh  langgraph.sh
scripts/deploy-heroku/: chatbot.sh  deploy.sh  langgraph.sh
secure_api/: .gitignore  README.md  __init__.py  access_validator.py  main.py  requirements.txt  telegram_validator.py
test_data/screenshots/: users.json
