[project]
name = "agent-taskmanager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"


[tool.uv.workspace]
members = [
    "chatbot",
    "langgraph-app",
    "libs/conversation_states"
]

[tool.uv.sources]
conversation-states = { workspace = true }