[project]
name = "chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "hypercorn>=0.17.3",
    "httpx>=0.27,<1",
    "langgraph-sdk>=0.3.4",
    "python-dotenv>=1.0.0",
    "python-telegram-bot>=22.0",
    "quart>=0.20.0",
    "watchdog[watchmedo]>=6.0.0",
]

[tool.setuptools]
packages = []
