[project]
name = "langgraph-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "conversation-states @ file:///workspaces/libs/conversation_states",
    "langchain==0.3.23",
    "langchain-community==0.3.21",
    "langchain-core==0.3.54",
    "langchain-openai==0.3.14",
    "langchain-text-splitters==0.3.8",
    "langgraph==0.4.3",
    "langgraph-checkpoint-sqlite==2.0.6",
    "langgraph-cli[inmem]==0.2.10",
    "langgraph-prebuilt==0.1.8",
    "langgraph-runtime-inmem==0.0.11",
    "langgraph-sdk==0.1.66",
    "langsmith==0.3.29",
    "tavily-python>=0.5.4",
    "trustcall>=0.0.36",
    "wikipedia>=1.4.0",
]

