[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "langgraph-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.2.9",
    "langchain-community>=0.3.21",
    "langchain-core>=1.2.9",
    "langchain-openai>=1.1.8",
    "langchain-text-splitters>=1.1.0",
    "langgraph>=1.0.8",
    "langgraph-checkpoint-sqlite>=2.0.6",
    "langgraph-cli[inmem]>=0.4.12",
    "langgraph-prebuilt>=0.1.8",
    "langgraph-runtime-inmem>=0.0.11",
    "langgraph-sdk>=0.3.4",
    "langsmith>=0.6.9",
    "tavily-python>=0.5.4",
    "trustcall>=0.0.36",
    "wikipedia>=1.4.0",
]

[tool.setuptools.packages.find]
where = ["."]
# Keep the runtime surface area tight so editable installs inside containers are deterministic.
include = ["lg_main*", "tool_sets*", "prompt_templates*", "testing_utils*", "config*"]
exclude = ["backup*"]
