[project]
name = "conversation-states"
version = "0.1.3"
description = "Shared models for LangGraph state"
authors = [{name = "Victor Diukov"}]
dependencies = [
    "pydantic>=2.0",
    "langgraph",
    "langchain-core",
    "tiktoken"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["conversation_states"]


[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
conversation_states = ["**/*.py"]

[tool.uv.workspace]
members = [
    "conversation_states",
]
